java_backend/target/kubernetes/kubernetes.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2023-11-11 - 08:10:35 +0000
  labels:
    app.kubernetes.io/name: hackathon
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  name: hackathon
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: hackathon
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2023-11-11 - 08:10:35 +0000
  labels:
    app.kubernetes.io/name: hackathon
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  name: hackathon
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hackathon
      app.kubernetes.io/version: 1.0.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.quarkus.io/build-timestamp: 2023-11-11 - 08:10:35 +0000
      labels:
        app.kubernetes.io/name: hackathon
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
    spec:
      containers:
      - args:
        - -jar
        - /deployments/quarkus-run.jar
        - -cp
        - /deployments/lib/jakarta.annotation.jakarta.annotation-api-1.3.5.jar:/deployments/lib/jakarta.inject.jakarta.inject-api-1.0.jar:/deployments/lib/io.quarkus.quarkus-development-mode-spi-1.12.2.Final.jar:/deployments/lib/io.smallrye.common.smallrye-common-annotation-1.5.0.jar:/deployments/lib/io.smallrye.config.smallrye-config-common-1.10.2.jar:/deployments/lib/io.smallrye.common.smallrye-common-function-1.5.0.jar:/deployments/lib/io.smallrye.common.smallrye-common-expression-1.5.0.jar:/ [...]
        - -Dquarkus.http.host=0.0.0.0
        - -Djava.util.logging.manager=org.jboss.logmanager.LogManager
        command:
        - java
        image: mktetts/hackathon:1.0.0-SNAPSHOT
        imagePullPolicy: Always
        name: hackathon
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
